Code smells fixing following Java 17 migration (#849)